--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,16 @@
+@font-face {
+  font-family: "BeaufortforLOL-BoldItalic";
+  src: url("./Fonts_Package/BeaufortForLoL-OTF/BeaufortforLOL-Bold.otf");
+  font-weight: bold;
+  font-style: italic;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: "BeaufortforLOL-BoldItalic";
 }
