--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,27 @@
 body {
   font-family: "BeaufortforLOL-BoldItalic";
 }
+
+
+
+/*scrollbar */
+::-webkit-scrollbar {
+  width: 3px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: goldenrod; 
+  transition: 0.3s;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(141, 107, 20); 
+  transition: 0.3s;
+}
