--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Cormorant+Unicase:wght@300;400;500;600;700&display=swap");
 @font-face {
   font-family: "BeaufortforLOL-BoldItalic";
   src: url("./Fonts_Package/BeaufortForLoL-OTF/BeaufortforLOL-Bold.otf");
