--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Cormorant+Unicase:wght@300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
 @font-face {
   font-family: "BeaufortforLOL-BoldItalic";
   src: url("./Fonts_Package/BeaufortForLoL-OTF/BeaufortforLOL-Bold.otf");
