--- a/src/index.css
+++ b/src/index.css
@@ -156,5 +156,28 @@ body {
   margin-bottom: 6px;
 }
 
+.customButton {
+  font-family: "Marcellus SC", serif;
+  color: black;
+  box-shadow: inset 0 0 2px #000000;
+  background: linear-gradient(
+    to bottom,
+    rgba(240, 128, 24, 1),
+    rgba(241, 224, 133, 1)
+  );
+  border: none !important; 
+}
+.customButton:hover{
+  transform: scale(1.1);
+  color: black !important;
+  
+}
+.customButton:hover,
+.customButton:focus {
+  background: linear-gradient(
+    to bottom,
+    rgba(240, 128, 24, 1),
+    rgba(241, 224, 133, 1)
+  ) !important;
+}
 
-/* For Team Registration */
