--- a/src/index.css
+++ b/src/index.css
@@ -223,16 +223,11 @@ body {
   background: rgba(255, 255, 255, 1);
   transition: 0.3s;
 }
-.notifications-delete-handler{
-  display:flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 25px;
-}
+
 .ant-modal-title{
   width: 90%;
-  padding-top: 5px;
 }
-.notification-deletion{
-  cursor: pointer;
+.notification-main_wrapper{
+  display: flex;
+  flex-direction: column-reverse;
 }
